Fix mobile overflow et largeur barre de navigation

--- a/src/css/desktop.scss
+++ b/src/css/desktop.scss
@@ -81,3 +81,9 @@
         margin-bottom:0;
     }
 }
+
+@include widescreen {
+    .nav-left, .nav-right {
+        flex-basis: auto;
+    }
+}
