--- a/src/css/mobile.scss
+++ b/src/css/mobile.scss
@@ -8,6 +8,10 @@
     src: url("../fonts/goodvibrationsscript.ttf");
 }
 
+body{
+    overflow-x: hidden;
+}
+
 ::selection {
     background: $primary;
     color: white;
